--- a/deployment/service.yaml
+++ b/deployment/service.yaml
@@ -1,10 +1,10 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: myapp
+  name: demoapp
 spec:
   selector:
-    app: myapp
+    app: demoapp
   ports:
     - protocol: TCP
       port: 80
