--- a/deployment/ingress.yaml
+++ b/deployment/ingress.yaml
@@ -2,7 +2,9 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   annotations:
-    ingress.kubernetes.io/rewrite-target: /
+    kubernetes.io/ingress.class: "nginx"
+    ingress.kubernetes.io/ssl-redirect: "false"
+    kubernetes.io/ingress.allow-http: "true"
   generation: 1
   name: demoapp
 spec:
@@ -14,7 +16,7 @@ spec:
           serviceName: demoapp
           servicePort: 80
         path: /demoapp
-  tls:
-  - hosts:
-    - demoapp.com
-    secretName: secret-tls-ssl
+  #tls:
+  #- hosts:
+  #  - demoapp.com
+  #  secretName: secret-tls-ssl
