--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -13,7 +13,7 @@ spec:
       dnsPolicy: ClusterFirst
       containers:
       - name: demoapp
-        image: aimvector/kube-demo:go-1.9-v1
+        image: aimvector/kube-demo:go-v1
         imagePullPolicy: IfNotPresent
         ports:
           - containerPort: 80
