--- a/deployment/service.yaml
+++ b/deployment/service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   selector:
     app: demoapp
-  type: LoadBalancer
+  #type: LoadBalancer
   ports:
     - protocol: TCP
       port: 80
