--- a/helm/ingress/templates/backend.service.yaml
+++ b/helm/ingress/templates/backend.service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: default-http-backend
-  namespace: ingress
+  namespace: ingress-nginx
   labels:
     app: default-http-backend
 spec:
@@ -10,4 +10,4 @@ spec:
   - port: 80
     targetPort: 8080
   selector:
-    appp: default-http-backend
+    app: default-http-backend
