--- a/helm/ingress/templates/frontend.service.yaml
+++ b/helm/ingress/templates/frontend.service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ingress-nginx
-  namespace: ingress
+  namespace: ingress-nginx
   labels:
     app: ingress-nginx
 spec:
