--- a/helm/ingress/templates/robots.configmap.yaml
+++ b/helm/ingress/templates/robots.configmap.yaml
@@ -2,7 +2,7 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: robots-text
-  namespace: ingress
+  namespace: ingress-nginx
 data:
   robots.txt: |
     User-agent: *
